2016-01-14
A bit of documentation in rationalNumbers

2016-01-14
Added a README and Makefile

2016-01-13
Created part 2 and tested it.  Everything seems to be working.  I believe a queue could make it run faster, but the
current implementation gets the job done.

2016-01-13
Fixed the arguments to main() in part 1.

2016-01-12
Created part 1 and tested it.  There's not much else to say.